cli/tests/error_syntax_empty_trailing_line.mjs.out
error: Unexpected eof at [WILDCARD]tests/error_syntax_empty_trailing_line.mjs:2:21
