cli/tests/error_syntax_empty_trailing_line.mjs
// Deliberately using .mjs to avoid triggering prettier
setTimeout(() => {}),
